internal/provider/testdata/invalid-legacy-files/guide_without_layout.html.markdown
---
subcategory: "Example"
page_title: "Example Guide"
description: |-
  Example description.
---

# Example Guide

Example contents.
